--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ click==8.2.1
 click-log==0.4.0
 cloudpathlib==0.23.0
 confection==0.1.5
-contourpy==1.3.3
+contourpy>=1.0
 Crawl4AI==0.7.4
 cryptography==45.0.6
 cycler==0.12.1
@@ -36,7 +36,7 @@ fastapi==0.120.1
 fastapi-cli==0.0.14
 fastapi-cloud-cli==0.3.1
 filelock==3.19.1
-fonttools==4.60.1
+fonttools>=4.0
 frozenlist==1.7.0
 fsspec==2025.7.0
 greenlet==3.2.4
@@ -73,14 +73,14 @@ mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.6.4
 murmurhash==1.0.13
-networkx==3.5
+networkx>=2.8
 nltk==3.9.1
-numpy==2.3.2
+numpy>=1.23
 openai==1.101.0
 orjson==3.11.4
 outcome==1.3.0.post0
 packaging==25.0
-pandas==2.3.3
+pandas>=1.5
 patchright==1.52.5
 pillow==11.3.0
 playwright==1.54.0
@@ -114,7 +114,7 @@ rignore==0.7.1
 rpds-py==0.27.0
 rtree==1.4.1
 safetensors==0.6.2
-scipy==1.16.1
+scipy>=1.9
 seaborn==0.13.2
 selenium==4.35.0
 sentencepiece==0.2.1
@@ -141,7 +141,7 @@ tf-playwright-stealth==1.2.0
 thinc==8.3.6
 tiktoken==0.11.0
 tokenizers==0.22.1
-torch==2.9.0
+torch>=2.0
 tqdm==4.67.1
 transformers==4.57.1
 trimesh==4.7.4
@@ -155,7 +155,7 @@ tzlocal==5.3.1
 ujson==5.11.0
 urllib3==2.5.0
 uvicorn==0.38.0
-uvloop==0.22.1
+uvloop==0.22.1; sys_platform != "win32"
 wasabi==1.1.3
 watchfiles==1.1.1
 weasel==0.4.1
