--- a/requirements.txt
+++ b/requirements.txt
@@ -115,6 +115,7 @@ rpds-py==0.27.0
 rtree==1.4.1
 safetensors==0.6.2
 scipy>=1.9
+scikit-learn>=1.3
 seaborn==0.13.2
 selenium==4.35.0
 sentencepiece==0.2.1
