--- a/requirements-render.txt
+++ b/requirements-render.txt
@@ -1,11 +1,5 @@
-fastapi==0.120.1
-uvicorn==0.38.0
-pymongo==4.15.3
-dnspython==2.8.0
-python-dotenv==1.1.1
-starlette==0.48.0
-pydantic==2.11.7
-pydantic_core==2.33.2
-anyio==4.10.0
-typing_extensions==4.14.1
-annotated-types==0.7.0
+fastapi
+uvicorn
+pymongo
+dnspython
+python-dotenv
